@@ -743,5 +743,5 @@
     "*://html.onlineviewer.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.7.6"
+  "version": "3.1.7.7"
 }
