@@ -7,6 +7,7 @@ Add Monocle (UK)
 Add Stylist.co.uk
 Fix Advance Local (no amp)
 Fix El Espanol (js)
+Fix El Mercurio (Inversiones)
 
 * v3.1.7.3 (2023-05-08)
 Remove Medienhaus Aachen (fix obsolete)
